--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
+        "@radix-ui/colors": "^0.1.8",
+        "@radix-ui/react-dialog": "^1.0.2",
+        "@radix-ui/react-select": "^1.2.0",
         "antd": "4.20.0-alpha.1",
         "axios": "^0.23.0",
         "classnames": "^2.3.2",
